--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <p>1.Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment. <a href="https://pranshul-agrawal.github.io/stack-development-practical/p/practical1.html">Practical-1</a></p>
         <p>2.Live your First Web-Page on Git-Hub. <a href="https://pranshul-agrawal.github.io/stack-development-practical/p/practical2.html">Practical-2</a></p>
         <p>3. Create a web page showing a basic html structure using character Entities and span Tag. <a href="https://pranshul-agrawal.github.io/stack-development-practical/p/practical3.html">Practical-3</a></p>
-        <p>4. Create a website having list of all practical and their individual practical Page links. <a href="https://shubhang-verma8.github.io/Assignment-1-Full-Stack-Development3/p/practical-4.html">Practical-4</a></p>
+        <p>4. Create a website having list of all practical and their individual practical Page links. <a href="https://pranshul-agrawal.github.io/stack-development-practical/p/practical4.html">Practical-4</a></p>
 </body>
 </html>
